--- a/apuntes.html
+++ b/apuntes.html
@@ -8,6 +8,7 @@
 <body>
     <h1>Pagina de Apuntes</h1>
    <p> <a href="hellow_world.html"> ejercicio "Hellow World"</a></p>
+   <p> <a href="https://juandagalo98.github.io/Curso_JavaScript/">Volver a pagina principal </a></p>
 
 </body>
 </html>
