--- a/hellow_world.html
+++ b/hellow_world.html
@@ -6,6 +6,15 @@
     <title>Hellow World</title>
 
     <style>
+
+        body {
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+   }
         
     </style>
     
@@ -26,7 +35,7 @@
             <h2>Articulo2</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati laudantium animi, ratione officiis accusantium totam sit tempora, maiores voluptate, voluptatibus molestias quod ab quia. Sapiente officia magnam, illum assumenda sunt expedita enim ipsa sint eius animi neque cum eaque vel dicta laboriosam reiciendis suscipit autem nesciunt ducimus odit quasi voluptatem corrupti. Provident, vel aliquid, iste sequi dolorum reprehenderit nobis quibusdam iure neque reiciendis sapiente ipsa iusto, cum recusandae pariatur nemo quas a fugit eligendi odio repellat architecto optio repellendus ipsam. Officiis veniam perferendis vitae quas ipsa rem cumque consectetur esse, fuga molestias, at commodi nam sunt laboriosam ullam vel cupiditate. Aliquid porro nemo quod aliquam harum dicta eum quam, dolor neque fugit dolore aspernatur, pariatur earum ratione cumque veniam ea.</p>
 
-        <p><a href="apuntes.html">Ir a los apuntes</a></p>
+        <p><a href="apuntes.html">Volver a los apuntes</a></p>
     </main>
 
     <script>
