--- a/hellow_world.html
+++ b/hellow_world.html
@@ -7,14 +7,13 @@
 
     <style>
 
-        body {
-    margin: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-   }
+       body {
+            font-family: 'Courier New', Courier, monospace;
+        }
+        main {
+            margin: auto;
+            width: 800px;
+        }
         
     </style>
     
