--- a/apuntes.html
+++ b/apuntes.html
@@ -4,11 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Apuntes JavaScript</title>
+
+    <style>
+        body {
+            font-family: 'Courier New', Courier, monospace;
+        }
+
+        main {
+            margin:auto ;
+            width: 800px;
+        }
+        .centertext {
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
-    <h1>Pagina de Apuntes</h1>
-   <p> <a href="hellow_world.html"> Ejercicio "Hellow World"</a></p>
-   <p> <a href="https://juandagalo98.github.io/Curso_JavaScript/">Volver a pagina principal </a></p>
+    <h1 class="centertext">PAGINA DE APUNTES</h1>
+   <p class="centertext"> <a href="hellow_world.html"> Ejercicio "Hellow World"</a></p>
+   <p class="centertext"> <a href="https://juandagalo98.github.io/Curso_JavaScript/">Volver a pagina principal </a></p>
 
 </body>
 </html>
