--- a/arrays_objetos.html
+++ b/arrays_objetos.html
@@ -20,7 +20,7 @@
 </head>
 <body>
     <main>
-        <a href="apuntes.html">Volver a los apuntes</a>
+        <a href="apunts.html">Volver a los apuntes</a>
     </main>
     
     <script src="arrays_objectos.js"></script>
