--- a/variables.html
+++ b/variables.html
@@ -4,8 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Variables</title>
+
+    <style>
+        body {
+            font-family: 'Courier New', Courier, monospace;
+        }
+        main {
+            margin: auto;
+            width: 800px;
+        }
+    </style>
 </head>
 <body>
+    <main>
+        <a href="apunts.html">Volver a los apuntes</a>
+    </main>
+    
     <script src="variables.js"></script>
 </body>
 </html>
