--- a/variables.html
+++ b/variables.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <main>
-        <a href="apuntes.html">Volver a los apuntes</a>
+        <a href="apuntes.html">VOLVER A LOS APUNTES</a>
     </main>
     
     <script src="variables.js"></script>
